welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: value unary_! is not a member of Int
  } while(!h=0)
          ^